Add sweeps and scripts

--- a/script/data-aug/organize_w_negatives.ipynb
+++ b/script/data-aug/organize_w_negatives.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read Answers\n",
-      "Read Negatives Matrix\n",
-      "Read Questions\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import itertools\n",
     "from collections import defaultdict\n",
@@ -100,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,40 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Questions Path:  ../../datasets/VQA/back-translate/bt_fil_dcp_sampling_random_v2_OpenEnded_mscoco_val2014_questions.pkl\n",
-      "Answers Path:  ../../datasets/VQA/back-translate/bt_fil_dcp_sampling_random_val_target.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 214354/214354 [19:32<00:00, 182.75it/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Questions Path:  ../../datasets/VQA/back-translate/bt_fil_dcp_sampling_random_v2_OpenEnded_mscoco_train2014_questions.pkl\n",
-      "Answers Path:  ../../datasets/VQA/back-translate/bt_fil_dcp_sampling_random_train_target.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 443757/443757 [39:29<00:00, 187.30it/s]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for que_data, ans_data, que_path, ans_path in zip(questions_data, \n",
     "                                                  answers_data, \n",
@@ -246,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,20 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "300"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "values = list(save_negs_dict_val.values())\n",
     "lens = [len(x[\"top_k_questions_neg\"]) for x in values]\n",
@@ -281,52 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Save Path: ../../datasets/VQA/back-translate/fil_dcp_sampling_random_val_question_negs.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 810454/810454 [00:18<00:00, 44905.57it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Save Path: ../../datasets/VQA/back-translate/fil_dcp_sampling_random_train_question_negs.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1680018/1680018 [00:57<00:00, 29098.97it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Save Path: ../../datasets/VQA/back-translate/fil_dcp_sampling_random_trainval_question_negs.pkl\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2490472/2490472 [01:12<00:00, 34304.73it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -364,7 +269,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = cPickle.load(open(\"../../datasets/VQA/back-translate/fil_train_question_negs.pkl\", \"rb\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 19\n",
+    "print(f\"Original: {question_dict[data['qids'][idx]]} \\n -----------------\")\n",
+    "neg_ids = data[\"question_negs\"][idx]\n",
+    "for id in negs_ids:\n",
+    "    if id > 0:\n",
+    "        print(question_dict[id])"
+   ]
   }
  ],
  "metadata": {
